--- a/views/adminSearchBooking.pug
+++ b/views/adminSearchBooking.pug
@@ -1,92 +1,263 @@
 doctype html
 html(lang='en')
-  include common/adminHeader.pug
+  include common/header.pug 
   +head("Admin Search Bookings")
-  body#page-top
-    // Page Wrapper
-    script( type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js")
-    script( type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js")
-    script(src="js/searchBooking.js")
-    #wrapper
-      // Sidebar
-      include common/adminNavbar.pug
-      +navbar(user)
-      // Content Wrapper
-      #content-wrapper.d-flex.flex-column
-        // Main Content
-        #content
-          // Topbar
-          include common/adminHorizontalNavbar.pug
-          +navbar(user)
-          // Begin Page Content
-          .container-fluid
-            // Page Heading
-            .d-sm-flex.align-items-center.justify-content-between.mb-4
-              h1.h3.mb-0.text-gray-800 Search Bookings
-    
-            .row
-              .col-lg-10.offset-lg-1
-                .card.shadow.mb-4
-                    .card-body(style="text-align:left")
-                        .row
-                            .col-sm-4
-                                label(for="bookingNumber" style="text-align:left") Booking Number
-                                input.form-control(style="width:100% !important;text-align:left;" id="bookingNumber" required=true, type='text')
-                            .col-sm-4
-                                label(for="bookedFromDt" style="text-align:left") Booked From
-                                input.form-control(style="width:100% !important;text-align:left;" id="bookedFromDt" required=true, name='bookedFromDt', type='date')
-                            .col-sm-4
-                                label(for="bookedToDt" style="text-align:left") Booked To
-                                input.form-control(style="width:100% !important;text-align:left;" id="bookedToDt" required=true, name='bookedToDt', type='date')
-                           
-                        .row(style="margin-top:10px")
-                            .col-sm-3
-                                label(for="checkinFromDt" style="text-align:left") Check In From
-                                input.form-control(style="width:100% !important;text-align:left;" id="checkinFromDt" min=0 required=true, name='checkinFromDt', type='date')
-                            
-                            .col-sm-3
-                                label(for="checkinToDt" style="text-align:left") Check In To
-                                input.form-control(style="width:100% !important;text-align:left;" id="checkinToDt" min=0 required=true, name='checkinToDt', type='date')
-                            
-                            .col-sm-3
-                                label(for="checkoutFromDt" style="text-align:left") Check Out From
-                                input.form-control(style="width:100% !important;text-align:left;" id="checkoutFromDt" min=0 required=true, name='checkoutFromDt', type='date')
-                            
-                            .col-sm-3
-                                label(for="checkoutToDt" style="text-align:left") Check Out To
-                                input.form-control(style="width:100% !important;text-align:left;" id="checkoutToDt" min=0 required=true, name='checkoutToDt', type='date')
-                            
-                        .row(style="margin-top:10px")
-                            .col-sm-3
-                                label(for="Status" style="text-align:left") Status
-                                select.form-control(id="status" style="width:100%")
-                                    option(value = 0)
-                                    option(value = 1) Successful
-                                    option(value = 2) Cancelled   
-                            .col-sm-3  
-                            .col-sm-3
-                                input.primary-btn(style="margin-top:10px" type="submit" id="search" value="Search")
-                            .col-sm-3
-                                input.primary-btn(style="margin-top:10px" type="submit" id="clear" value="Clear")
+  body(style='padding-top: 72px;')
+    include common/navbar.pug 
+    +navbar(user)
+    .container-fluid.pt-5.pb-3.border-bottom.px-lg-5
+      .row
+        .col-xl-8
+            h1 Bookings
             
-            section.category-section.spad(style="padding-top:50px")
-                .container
-                    .row
-                        .col-sm-12
-                            .card.shadow.mb-12
-                                .card-body(style="text-align:center")
+    .container-fluid.py-5.px-lg-5
+        .row
+            
+            .col-lg-3.pt-3
+                form(action='/adminSearchBooking' method="GET")
+                    .mb-4
+                        label(for="bookingNumber" style="text-align:left") Confirmation Code
+                        input.form-control(style="width:100% !important;text-align:left;" id="bookingNumber" name="bookingNumber"  type='text')
+                            
+                    .mb-4
+                        label(for="bookedFromDt" style="text-align:left") Booked From
+                        //- input.form-control(style="width:100% !important;text-align:left;" id="bookedFromDt" required=true, name='bookedFromDt', type='date')
+                        .datepicker-container.datepicker-container-left
+                            input#bookedFromDt.form-control(type='text' name='bookedFromDt' placeholder='Choose your date'  data-style='btn-selectpicker' title=' ')   
+                    .mb-4
+                        label(for="bookedToDt" style="text-align:left") Booked To
+                        .datepicker-container2.datepicker-container-left.dates
+                            input#bookedToDt.form-control(type='text' name='bookedToDt' placeholder='Choose your date' data-style='btn-selectpicker' title=' ')
+                    
+                    .mb-4
+                        label(for="checkinFromDt" style="text-align:left") Check In From
+                        .datepicker-container3.datepicker-container-left.dates
+                            input#checkinFromDt.form-control(type='text' name='checkinFromDt' placeholder='Choose your date' data-style='btn-selectpicker' title=' ')
+
+                    .mb-4                            
+
+                        label(for="checkinToDt" style="text-align:left") Check In To
+                        .datepicker-container4.datepicker-container-left.dates
+                            input#checkinToDt.form-control(type='text' name='checkinToDt' placeholder='Choose your date' data-style='btn-selectpicker' title=' ')
+                            
+                    .mb-4
+                        label(for="checkoutFromDt" style="text-align:left") Check In From
+                        .datepicker-container5.datepicker-container-left.dates
+                            input#checkoutFromDt.form-control(type='text' name='checkoutFromDt' placeholder='Choose your date' data-style='btn-selectpicker' title=' ')
+
+                    .mb-4                            
+
+                        label(for="checkoutToDt" style="text-align:left") Check In To
+                        .datepicker-container6.datepicker-container-left.dates
+                            input#checkoutToDt.form-control(type='text' name='checkoutToDt' placeholder='Choose your date' data-style='btn-selectpicker' title=' ')
+                           
+
+
+                        //- label.form-label(for='accountTypeId') Account Type
+                        //- select#accountTypeId.selectpicker.form-control(name='accountTypeId' data-style='btn-selectpicker' title=' ')
+                            each accountType in accountTypes
+                                option(value=accountType.id) #{accountType.type} 
+                    
+                    .mb-4
+                        button#search.btn.btn-primary(type='submit')
+                            i.fas.fa-filter.me-1
+                            | Search
+                .mb-4
+                    button#clear.btn.btn-primary
+                        i.fas.fa-filter.me-1
+                        | Reset Filters
+            .col-lg-9
+                .d-flex.justify-content-between.align-items-center.flex-column.flex-md-row.mb-4
+                    .me-3
+                        p.mb-3.mb-md-0
+                            strong #{bookings.length}
+                            |  results found
+                .list-group.shadow.mb-5
+                    each booking in bookings
+                        a.list-group-item.list-group-item-action.p-4(href='/booking?id=' + booking.id)
+                            .row
+                                .col-lg-2.align-self-center.mb-4.mb-lg-0
+                                    .d-flex.align-items-center.mb-3
+                                        
+                                        h2.h5.mb-0 #{booking.propertyName}
+                                    
+                                .col-lg-10
                                     .row
-                                        .col-sm-12
-                                            table.table.shadow.mb-12.table-striped.table-sm.dataTable.no-footer( id="searchResultTable"  role="grid" aria-describedby="classes_info")
-                                                thead(style="text-align:center")
-                                                    tr.titleBar(role="row")
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Booking Number
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Guest
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Check in
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Checkout
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Booked
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Property
-                                                        th(class="sorting_asc smallerTextSize" style="width:14.286%") Total Cost
-                                                tbody
-        include common/adminFooter.pug
-        +footer()
+                                        .col-6.col-md-4.col-lg-2.py-3.mb-3.mb-lg-0
+                                            h6.label-heading Confirmation Code
+                                            p.text-sm.fw-bold #{booking.confirmationCode}
+                                            //- h6.label-heading Nights 
+                                            //- p.text-sm.fw-bold.mb-0 3
+                                        .col-6.col-md-4.col-lg-2.py-3
+                                            h6.label-heading Customer
+                                            p.text-sm.fw-bold #{booking.customerName} 
+                                        .col-6.col-md-4.col-lg-2.py-3
+                                            h6.label-heading Check In
+                                            p.text-sm.fw-bold #{booking.checkinDt} 
+                                            
+                                        .col-6.col-md-4.col-lg-2.py-3
+                                            h6.label-heading Check Out
+                                            p.text-sm.fw-bold #{booking.checkoutDt}                                        
+                                            
+                                        .col-6.col-md-4.col-lg-2.py-3
+                                            h6.label-heading Booking Date
+                                            p.text-sm.fw-bold #{booking.bookingDttm}
+
+                                        .col-6.col-md-4.col-lg-2.py-3
+                                            h6.label-heading £ Cost
+                                            p.text-sm.fw-bold #{(parseFloat(booking.cost)).toFixed(2)}
+                                            
+                                        //- .col-12.col-lg-3.align-self-center
+                                            p.text-sm.text-muted Joined
+                                            span.badge.badge-pill.p-2.badge-secondary-light #{result.date}
+            
+    // Footer
+    footer.position-relative.z-index-10.d-print-none
+      // Main block - menus, subscribe form
+      .py-6.bg-gray-200.text-muted
+        .container
+          .row
+            .col-lg-4.mb-5.mb-lg-0
+              .fw-bold.text-uppercase.text-dark.mb-3 Directory
+              p Lorem ipsum dolor sit amet, consectetur adipisicing.
+              ul.list-inline
+                li.list-inline-item
+                  a.text-muted.text-primary-hover(href='#' target='_blank' title='twitter')
+                    i.fab.fa-twitter
+                li.list-inline-item
+                  a.text-muted.text-primary-hover(href='#' target='_blank' title='facebook')
+                    i.fab.fa-facebook
+                li.list-inline-item
+                  a.text-muted.text-primary-hover(href='#' target='_blank' title='instagram')
+                    i.fab.fa-instagram
+                li.list-inline-item
+                  a.text-muted.text-primary-hover(href='#' target='_blank' title='pinterest')
+                    i.fab.fa-pinterest
+                li.list-inline-item
+                  a.text-muted.text-primary-hover(href='#' target='_blank' title='vimeo')
+                    i.fab.fa-vimeo
+            .col-lg-2.col-md-6.mb-5.mb-lg-0
+              h6.text-uppercase.text-dark.mb-3 Rentals
+              ul.list-unstyled
+                li
+                  a.text-muted(href='index.html') Rooms
+                li
+                  a.text-muted(href='category-rooms.html') Map on top
+                li
+                  a.text-muted(href='category-2-rooms.html') Side map
+                li
+                  a.text-muted(href='category-3-rooms.html') No map
+                li
+                  a.text-muted(href='detail-rooms.html') Room detail
+            .col-lg-2.col-md-6.mb-5.mb-lg-0
+              h6.text-uppercase.text-dark.mb-3 Pages
+              ul.list-unstyled
+                li
+                  a.text-muted(href='compare.html') Comparison 
+                li
+                  a.text-muted(href='team.html') Team 
+                li
+                  a.text-muted(href='contact.html') Contact 
+            .col-lg-4
+              h6.text-uppercase.text-dark.mb-3 Daily Offers & Discounts
+              p.mb-3  Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.
+              form#newsletter-form(action='#')
+                .input-group.mb-3
+                  input.form-control.bg-transparent.border-dark.border-end-0(type='email' placeholder='Your Email Address' aria-label='Your Email Address')
+                  button.btn.btn-outline-dark.border-start-0(type='submit')
+                    i.fa.fa-paper-plane.text-lg
+      // Copyright section of the footer
+      .py-4.fw-light.bg-gray-800.text-gray-300
+        .container
+          .row.align-items-center
+            .col-md-6.text-center.text-md-start
+              p.text-sm.mb-md-0 © 2021, Your company. All rights reserved.
+            .col-md-6
+              ul.list-inline.mb-0.mt-2.mt-md-0.text-center.text-md-end
+                li.list-inline-item
+                  img.w-2rem(src='img/visa.svg' alt='...')
+                li.list-inline-item
+                  img.w-2rem(src='img/mastercard.svg' alt='...')
+                li.list-inline-item
+                  img.w-2rem(src='img/paypal.svg' alt='...')
+                li.list-inline-item
+                  img.w-2rem(src='img/western-union.svg' alt='...')
+    // JavaScript files
+    script.
+      // ------------------------------------------------------- //
+      //   Inject SVG Sprite -
+      //   see more here
+      //   https://css-tricks.com/ajaxing-svg-sprite/
+      // ------------------------------------------------------ //
+      function injectSvgSprite(path) {
+      var ajax = new XMLHttpRequest();
+      ajax.open("GET", path, true);
+      ajax.send();
+      ajax.onload = function(e) {
+      var div = document.createElement("div");
+      div.className = 'd-none';
+      div.innerHTML = ajax.responseText;
+      document.body.insertBefore(div, document.body.childNodes[0]);
+      }
+      }
+      // to avoid CORS issues when viewing using file:// protocol, using the demo URL for the SVG sprite
+      // use your own URL in production, please :)
+      // https://demo.bootstrapious.com/directory/1-0/icons/orion-svg-sprite.svg
+      //- injectSvgSprite('${path}icons/orion-svg-sprite.svg');
+      injectSvgSprite('https://demo.bootstrapious.com/directory/1-4/icons/orion-svg-sprite.svg');
+    // jQuery
+    script(src='vendor/jquery/jquery.min.js')
+    // Bootstrap JS bundle - Bootstrap + PopperJS
+    script(src='vendor/bootstrap/js/bootstrap.bundle.min.js')
+    // Magnific Popup - Lightbox for the gallery
+    script(src='vendor/magnific-popup/jquery.magnific-popup.min.js')
+    // Smooth scroll
+    script(src='vendor/smooth-scroll/smooth-scroll.polyfills.min.js')
+    // Bootstrap Select
+    script(src='vendor/bootstrap-select/js/bootstrap-select.min.js')
+    // Object Fit Images - Fallback for browsers that don't support object-fit
+    script(src='vendor/object-fit-images/ofi.min.js')
+    // Swiper Carousel
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js')
+    script.
+      var basePath = ''
+    // Main Theme JS file
+    script(src='js/theme.js')
+    // Daterange picker
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-date-range-picker/0.19.0/jquery.daterangepicker.min.js')
+    script(src='js/datepicker.js')
+    //- script(src='js/accountSearch.js')
+    // Price Slider
+    //- script(src='vendor/nouislider/nouislider.min.js')
+    //- script(src="js/properties.js")
+    //- script.
+    //-     $(document).ready(function(){
+    //-         $('#guests').on('change', function(){
+    //-             console.log($('#guests').val())
+    //-         })
+    //-     })
+    //- script.
+      var snapSlider = document.getElementById('slider-snap');
+      noUiSlider.create(snapSlider, {
+      start: [40, 110],
+      snap: false,
+      connect: true,
+      step: 1,
+      range: {
+      'min': 40,
+      'max': 110
+      }
+      });
+      var snapValues = [
+      document.getElementById('slider-snap-value-from'),
+      document.getElementById('slider-snap-value-to')
+      ];
+      var inputValues = [
+      document.getElementById('slider-snap-input-from'),
+      document.getElementById('slider-snap-input-to')
+      ];
+      snapSlider.noUiSlider.on('update', function(values, handle) {
+      snapValues[handle].innerHTML = values[handle];
+      inputValues[handle].value = values[handle];
+      })
