--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -53,7 +53,7 @@ mixin navbar()
                     a.nav-link(href='/properties?cityId=1') Places to Stay
                 li.nav-item.dropdown.ms-lg-3
                   a#userDropdownMenuLink(href='#' data-bs-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-                      img.avatar.avatar-sm.avatar-border-white.me-2(src='img/avatar/avatar-10.jpg' alt='Jack London')
+                      img.avatar.avatar-sm.avatar-border-white.me-2(src='img/avatar/profile.png' alt='Jack London')
                   .dropdown-menu.dropdown-menu-end(aria-labelledby='userDropdownMenuLink')
                       a.dropdown-item(href='/myAccount') My Account
                       .dropdown-divider
