--- a/views/properties.pug
+++ b/views/properties.pug
@@ -315,23 +315,21 @@ html(lang='en')
                         .card-body.d-flex.align-items-center
                             .w-100
                                 h6.card-title
-                                    a.text-decoration-none.text-dark(href='/property?id=' + property.id) #{property.name} - #{property.town}
-                                .d-flex.card-subtitle.mb-3
+                                  a.text-decoration-none.text-dark(href='/property?id=' + property.id) #{property.name} - #{property.town}
+                                
+                                .row
+                                  .col-lg-6
                                     p.flex-grow-1.mb-0.text-muted.text-sm #{property.bedrooms} bedrooms
-                                    //- p.flex-grow-1.mb-0.text-muted.text-sm #{property.guests} guests
-                                    //- p.flex-grow-1.mb-0.text-muted.text-sm #{property.bathrooms} bathrooms
-                                    //- p.flex-shrink-1.mb-0.card-stars.text-xs.text-end
-                                        i.fa.fa-star.text-warning
-                                        i.fa.fa-star.text-warning
-                                        i.fa.fa-star.text-warning
-                                        i.fa.fa-star.text-warning
-                                        i.fa.fa-star.text-gray-300   
-                                .d-flex.card-subtitle.mb-3
+                                  .col-lg-6
                                     p.flex-grow-1.mb-0.text-muted.text-sm #{property.guests} guests     
-                                .d-flex.card-subtitle.mb-3
-                                    p.flex-grow-1.mb-0.text-muted.text-sm #{property.bathrooms} bathrooms 
-                                .d-flex.card-subtitle.mb-3
-                                    p.flex-grow-1.mb-0.text-muted.text-sm #{property.beds} beds                            
+                                     
+                                .mb-3 
+                                  .row
+                                    .col-lg-6
+                                      p.flex-grow-1.mb-0.text-muted.text-sm #{property.bathrooms} bathrooms
+                                    .col-lg-6
+                                      p.flex-grow-1.mb-0.text-muted.text-sm #{property.beds} beds      
+                                               
                                 p.card-text.text-muted
                                     span.h4.text-primary £#{(parseFloat(property.pricePerDay)).toFixed(2)}
                                     |  per night
